--- a/config.json
+++ b/config.json
@@ -1,4 +1,23 @@
-{
+{"OPENAI_API_KEY": "ta-clé-openai-ici","OPENAI_API_KEY": "const axios = require("axios");
+const config = require("../config.json");
+
+module.exports = async function(prompt) {
+  try {
+    const response = await axios.post("https://api.openai.com/v1/chat/completions", {
+      model: "gpt-3.5-turbo",
+      messages: [{ role: "user", content: prompt }]
+    }, {
+      headers: {
+        "Authorization": `Bearer ${config.OPENAI_API_KEY}`,
+        "Content-Type": "application/json"
+      }
+    });
+
+    return response.data.choices[0].message.content.trim();
+  } catch (e) {
+    return "Erreur GPT : " + e.message;
+  }
+};",
 	"facebookAccount": {
 		"email": "",
 		"password": "",
@@ -12,13 +31,13 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "GoatBot",
-	"prefix": "-",
+	"nickNameBot": "AutoBot",
+	"prefix": "/",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": [],
+	"adminBot": [61577859579154],
 	"whiteListMode": {
 		"enable": false,
 		"whiteListIds": [],
