--- a/config.json
+++ b/config.json
@@ -12,13 +12,13 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "AutoBot",
+	"nickNameBot": "Camille Bot 😎😎🔥",
 	"prefix": "/",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": [61577859579154],
+	"adminBot": [61578153767211],[61578901088737]
 	"whiteListMode": {
 		"enable": false,
 		"whiteListIds": [],
